2005-03-19  Bruno Haible  <bruno@clisp.org>

	Fix gettext-tools/tests/gettext-5 bug.
	* gettextP.h (struct converted_domain): New type.
	(struct loaded_domain): Remove the conv, conv_tab fields. Add
	conversions, nconversions fields.
	(_nl_init_domain_conv): Remove declaration.
	(_nl_free_domain_conv): Remove declaration.
	(_nl_find_msg): Add convert argument.
	* dcigettext.c (DCIGETTEXT): Call _nl_find_msg with convert=1.
	(_nl_find_msg): Add convert argument. When a conversion to a different
	charset is needed, create a new converted_domain element, instead of
	throwing away the old converted translations.
	(get_output_charset): New function.
	* loadmsgcat.c (_nl_init_domain_conv): Remove function.
	(_nl_free_domain_conv): Remove function.
	(_nl_load_domain): Initialize the conversions array to empty. Use
	_nl_find_msg instead of _nl_init_domain_conv to retrieve the header
	entry.
	(_nl_unload_domain): Free the conversions array and its contents.

2005-03-19  Bruno Haible  <bruno@clisp.org>

	* dcigettext.c (struct known_translation_t): Change type of domainname
	field to 'const char *'.
	(DCIGETTEXT): Remove const-cast.

2005-04-18  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (_INTL_REDIRECT_ASM): Test for __APPLE_CC__ > 1.
	Needed because gcc-4.0 defines __APPLE_CC__ and implements
	__USER_LABEL_PREFIX__ correctly.
	* plural-exp.c (GERMANIC_PLURAL): Test for __APPLE_CC > 1.
	Needed because gcc-4.0 defines __APPLE_CC__.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 7:3:4.

2005-03-16  Bruno Haible  <bruno@clisp.org>

	Canonicalize locale names on MacOS X.
	* localename.c (_nl_locale_name_canonicalize): New function.
	(_nl_locale_name_default): Use it.
	* langprefs.c (_nl_locale_name_canonicalize): New declaration.
	(_nl_language_preferences_default): Use it.

2005-03-14  Bruno Haible  <bruno@clisp.org>
